Fix alignment

--- a/src/styles/Row.css
+++ b/src/styles/Row.css
@@ -95,15 +95,15 @@
 }
 .removeMylist {
   position: relative;
-  left: 255px;
+  left: 150px;
   bottom: 50px;
   height: 40px;
   border: transparent;
   width: 40px;
   background-color: darkgray;
-  /* background-image: url("https://image.flaticon.com/icons/png/512/87/87932.png"); */
+  background-image: url("https://image.flaticon.com/icons/png/512/87/87932.png");
   background-size: 40px;
-  /* background-position: -3px -3px; */
+  /* background-position: -2px -2px; */
   border-radius: 50%;
   background-repeat: no-repeat;
   padding: 0px 15px 0px 15px;
